--- a/hometogo/details.css
+++ b/hometogo/details.css
@@ -133,7 +133,7 @@ color:rgb(77, 77, 218);
 #button{
     cursor: pointer;
     background-color:  #6a31cb;
-    margin-left: 905px;
+    margin-left: 70%;
     padding: 15px;
     width:320px;
     border-radius: 5px;
